--- a/main.html
+++ b/main.html
@@ -4,5 +4,40 @@
     <script type="text/javascript" src="./script.js">
 </script>
   </body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sharable URLs</title>
+  </head>
+  <body>
+    <form id="urlForm">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name">
+      
+      <label for="year">Year:</label>
+      <input type="number" id="year" name="year">
+
+      <button type="button" id="button" onclick="updateUrl()">Submit</button>
+    </form>
+
+    <h3 id="url">https://localhost:8080/</h3>
+
+    <script>
+      function updateUrl() {
+        // Get input values
+        var name = document.getElementById("name").value;
+        var year = document.getElementById("year").value;
+
+        // Update URL
+        var updatedUrl = "https://localhost:8080/?name=" + encodeURIComponent(name) + "&year=" + encodeURIComponent(year);
+        
+        // Update h3 element
+        document.getElementById("url").textContent = updatedUrl;
+      }
+    </script>
+  </body>
+</html>
 
 </html>
